--- a/backend/package.json
+++ b/backend/package.json
@@ -7,36 +7,49 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "db:migrate": "psql $DATABASE_URL -f ../database/schema.sql"
+    "seed": "tsx src/scripts/seed.ts"
   },
-  "keywords": ["qa", "testing", "automation"],
+  "keywords": [
+    "qa",
+    "testing",
+    "automation"
+  ],
   "author": "",
   "license": "PROPRIETARY",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "playwright": "^1.40.1",
+    "@figma/rest-api-spec": "^0.34.0",
+    "@types/pngjs": "^6.0.5",
+    "@types/validator": "^13.15.10",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "cheerio": "^1.0.0-rc.12",
-    "winston": "^3.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "pixelmatch": "^7.1.0",
+    "playwright": "^1.40.1",
+    "pngjs": "^7.0.0",
+    "sharp": "^0.34.5",
+    "winston": "^3.11.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/cors": "^2.8.17",
-    "@types/multer": "^1.4.11",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^20.10.5",
     "@types/pg": "^8.10.9",
+    "@types/pixelmatch": "^5.2.6",
     "@types/xml2js": "^0.4.14",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
